Bug 1250947 [esr45] followup - Remove duplicate variable declaration to fix -Werror=shadow build failure. r=me, a=bustage